--- a/config.env
+++ b/config.env
@@ -1,9 +1,12 @@
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_xiaomi_lmi
+KERNEL_SOURCE_BRANCH=thirteen
+KERNEL_CONFIG=lmi_defconfig
+
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
+
+DEVICE_CODE=lmipro
 
 # Clang
 ## Custom
@@ -16,14 +19,14 @@ CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
 CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784d
+CLANG_VERSION=r458507
 
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
 
 # KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 KERNELSU_TAG=main
 
 # Configuration
@@ -39,5 +42,5 @@ ENABLE_CCACHE=true
 NEED_DTBO=false
 
 # Build boot images
-BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+BUILD_BOOT_IMG=true
+SOURCE_BOOT_IMAGE=https://github.com/china1949cl/KernelSuAction/raw/main/boot/boot.img
