--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_xiaomi_lmi
-KERNEL_SOURCE_BRANCH=thirteen
+KERNEL_SOURCE=https://github.com/UtsavBalar1231/kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=android12-stable
 KERNEL_CONFIG=lmi_defconfig
 
 KERNEL_IMAGE_NAME=Image
@@ -26,7 +26,7 @@ ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
 
 # KernelSU flags
-ENABLE_KERNELSU=true
+ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # Configuration
