--- a/config.env
+++ b/config.env
@@ -43,4 +43,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://github.com/china1949cl/KernelSuAction/raw/main/boot/boot.img
+SOURCE_BOOT_IMAGE=https://github.com/china1949cl/KernelSuAction/raw/main/boot/boot-miui_LMI_V14.0.4.0.SJKCNXM_7af1b0266e_12.0.img
