--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ KERNEL_CONFIG=lmi_defconfig
 
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 DEVICE_CODE=lmipro
 
