--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-KERNEL_SOURCE=https://github.com/Xiaomi-Devs/android_kernel_xiaomi_lmi
-KERNEL_SOURCE_BRANCH=lineage-18.1
-KERNEL_CONFIG=vendor/lmi_user_defconfig
+KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_google_msm-4.9
+KERNEL_SOURCE_BRANCH=lineage-19.1
+KERNEL_CONFIG=b1c1_defconfig
 
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
