--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_google_msm-4.9
 KERNEL_SOURCE_BRANCH=lineage-19.1
 KERNEL_CONFIG=b1c1_defconfig
 
-KERNEL_IMAGE_NAME=Image
+KERNEL_IMAGE_NAME=Image.lz4
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
