--- a/config.env
+++ b/config.env
@@ -30,7 +30,7 @@ ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # Configuration
-DISABLE-LTO=false
+DISABLE-LTO=true
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
