--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ KERNEL_CONFIG=b1c1_defconfig
 
 KERNEL_IMAGE_NAME=Image.lz4
 ARCH=arm64
-EXTRA_CMDS:LD=ld.lld NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64
+EXTRA_CMDS:LD=ld.gold NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64
 
 DEVICE_CODE=lmipro
 
@@ -30,7 +30,7 @@ ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # Configuration
-DISABLE-LTO=true
+DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
