--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ KERNEL_CONFIG=b1c1_defconfig
 
 KERNEL_IMAGE_NAME=Image.lz4
 ARCH=arm64
-EXTRA_CMDS:LD=ld.lld NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64 DTC_EXT=dtc
+EXTRA_CMDS:LD=ld.lld NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64 DTC_EXT=dtc LLVM_IAS=1 LLVM=1
 
 DEVICE_CODE=lmipro
 
