--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -58,6 +58,16 @@ jobs:
         mkdir clang-aosp
         wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/${{ env.CLANG_BRANCH }}/clang-${{ env.CLANG_VERSION }}.tar.gz
         tar -C clang-aosp/ -zxvf clang-${{ env.CLANG_VERSION }}.tar.gz
+        
+    - name: Download mkdtimg
+      run: |
+        cd $GITHUB_WORKSPACE/kernel_workspace
+        mkdir my-mkdtimg
+        cd my-mkdtimg
+        wget https://android.googlesource.com/platform/system/libufdt/+archive/refs/heads/master/utils.tar.gz
+        tar xvf utils.tar.gz
+        sudo cp src/mkdtboimg.py /usr/bin/mkdtimg
+        sudo chmod a+x /usr/bin/mkdtimg
 
     - name: Download Custom-Clang
       if: env.USE_CUSTOM_CLANG == 'true'
