--- a/config.env
+++ b/config.env
@@ -30,7 +30,7 @@ ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # Configuration
-DISABLE-LTO=true
+DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
@@ -43,4 +43,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://github.com/china1949cl/KernelSuAction/raw/main/boot/boot-miui_LMI_V14.0.4.0.SJKCNXM_7af1b0266e_12.0.img
+SOURCE_BOOT_IMAGE=https://mirrorbits.lineageos.org/full/crosshatch/20230711/boot.img
