--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -50,6 +50,8 @@ jobs:
         sudo chmod 600 /swapfile
         sudo mkswap /swapfile
         sudo swapon /swapfile
+        sudo swapon --show
+        sudo df -h
                
     - name: Setup build kernel environment
       run: |
