--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_google_msm-4.9
 KERNEL_SOURCE_BRANCH=lineage-19.1
 KERNEL_CONFIG=b1c1_defconfig
 
-KERNEL_IMAGE_NAME=Image.lz4
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 EXTRA_CMDS:NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64 DTC_EXT=dtc LLVM_IAS=1 LLVM=1
 
@@ -30,7 +30,7 @@ ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # Configuration
-DISABLE-LTO=false
+DISABLE-LTO=true
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
