--- a/config_RedmiK30ProZoomEdition.env
+++ b/config_RedmiK30ProZoomEdition.env
@@ -1,10 +1,10 @@
-KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_google_msm-4.9
-KERNEL_SOURCE_BRANCH=lineage-19.1
-KERNEL_CONFIG=b1c1_defconfig
+KERNEL_SOURCE=https://github.com/Pierre2324/NGK_android_kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=t-caf
+KERNEL_CONFIG=lmi_defconfig
 
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
-EXTRA_CMDS:NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64 DTC_EXT=dtc LLVM_IAS=1 LLVM=1
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 DEVICE_CODE=lmipro
 
@@ -30,7 +30,7 @@ ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # Configuration
-DISABLE-LTO=true
+DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
