--- a/config_Pixel3XL.env
+++ b/config_Pixel3XL.env
@@ -2,7 +2,7 @@ KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_google_msm-4.9
 KERNEL_SOURCE_BRANCH=lineage-19.1
 KERNEL_CONFIG=b1c1_defconfig
 
-KERNEL_IMAGE_NAME=Image
+KERNEL_IMAGE_NAME=Image.lz4
 ARCH=arm64
 EXTRA_CMDS:NM=llvm-nm OBJCOPY=llvm-objcopy SUBARCH=arm64 DTC_EXT=dtc LLVM_IAS=1 LLVM=1
 
